[package]
name = "fountain-parser-rs"
version = "0.4.0"
edition = "2021"
description = "A library to parse Fountain-formatted plain text files."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "1.5.0"
regex = "1.10.3"
unicode-segmentation = "1.11.0"
uuid = "1.7.0"

